ci: 增加蜗牛阅读签到job

--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -29,6 +29,7 @@ jobs:
           cd workflows
           yarn
           yarn checkin
+          yarn du
   SeaGold:
     needs: CheckIn
     runs-on: ubuntu-latest
