--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -31,7 +31,7 @@ jobs:
           cd workflows
           yarn
           yarn checkin
-
+          yarn du
 #  SeaGold:
 #    needs: CheckIn
 #    runs-on: ubuntu-latest
