--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -17,6 +17,8 @@ env:
   DINGDING_WEBHOOK: ${{ secrets.DINGDING_WEBHOOK }}
   PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
   WEIXIN_WEBHOOK: ${{ secrets.WEIXIN_WEBHOOK }}
+  DU_TOKEN: ${{ secrets.DU_TOKEN }}
+  DU_COOKIE: ${{ secrets.DU_COOKIE }}
 
 jobs:
   CheckIn:
