--- a/workflows/package.json
+++ b/workflows/package.json
@@ -7,12 +7,16 @@
   "scripts": {
     "checkin": "ts-node checkin.js",
     "seagold": "ts-node seagold.js",
+    "masdb": "ts-node masdb.js",
     "du": "ts-node du.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "fast-astar": "^1.0.6",
     "juejin-helper": "^1.7.2",
+    "mockjs": "^1.1.0",
+    "moment": "^2.30.1",
+    "mysql2": "^3.11.0",
     "nodemailer": "^6.7.0",
     "qs": "^6.11.1",
     "typescript": "^4.7.4"
