--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -21,7 +21,11 @@ env:
   FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
   DU_TOKEN: ${{ secrets.DU_TOKEN }}
   DU_COOKIE: ${{ secrets.DU_COOKIE }}
-
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_PORT: ${{ secrets.DB_PORT }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DB_DATABASE: ${{ secrets.DB_DATABASE }}
 jobs:
   CheckIn:
     runs-on: ubuntu-latest
@@ -34,6 +38,7 @@ jobs:
           yarn
           yarn checkin
           yarn du
+          yarn masdb
   # SeaGold:
   #   needs: CheckIn
   #   runs-on: ubuntu-latest
