--- a/workflows/package.json
+++ b/workflows/package.json
@@ -2,13 +2,14 @@
   "name": "workflows",
   "version": "1.8.0",
   "private": true,
-  "description": "稀土掘金助手：签到、抽奖、沾喜气、消除Bug、海底掘金游戏、自动化工作流。",
+  "description": "自动化工作流",
   "author": "Derek Li",
   "scripts": {
     "checkin": "ts-node checkin.js",
     "seagold": "ts-node seagold.js",
     "masdb": "ts-node masdb.js",
-    "du": "ts-node du.js"
+    "du": "ts-node du.js",
+    "jiaotong": "ts-node jiaotong.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
